# ms-teams-vtt-to-descript-py

./: README.md  main.py  pyproject.toml
